<resources>
    <string name="app_name">ProtoAPP</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar"><u>Registrar</u></string>
    <string name="olvidoContra">¿Olvido su contraseña?</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="conoce">Conoce</string>
    <string name="comparte">Comparte</string>
    <string name="inicio">Inicio</string>
    <string name="configuraci_n">Configuración</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="foro">Foro</string>
    <string name="departamentos">Departamentos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comparte_meetguate">Comparte MeetGuate</string>
    <string name="login_autor">https://wallpaperscraft.com/download/guatemala_island_mountain_beach_113267/1080x1920</string>
</resources>
