<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guate"
    tools:context=".activitys.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logom"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_mail"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:layout_marginBottom="35dp"
        android:textColor="#fff"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true"
        tools:ignore="SpUsage"
        android:textColorHint="#fff"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textColorHint="#fff"
        android:layout_marginBottom="130dp"
        android:layout_alignBottom="@+id/cardIngresar"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        tools:ignore="RtlHardcoded" />

    <android.support.v7.widget.CardView
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:id="@+id/cardIngresar"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/txtRegistrar"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:text="@string/ingresar"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txtRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textColor="#fff"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:id="@+id/linearLayout"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/facebook" />
    </LinearLayout>
</RelativeLayout>
